[gd_scene format=3 uid="uid://c4g5xvv514vbd"]

[ext_resource type="Script" uid="uid://bsmybpene47iy" path="res://Agents/Player/Inventory/inventory_view.gd" id="1_gtu14"]
[ext_resource type="PackedScene" uid="uid://riphvikjhvcy" path="res://Agents/Player/Inventory/slot.tscn" id="2_uhrxc"]

[node name="InventoryView" type="Control" unique_id=1148297373 groups=["InventoryPanel"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gtu14")
slot = ExtResource("2_uhrxc")

[node name="ColorRect" type="ColorRect" parent="." unique_id=433284838]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MiddleSplit" type="HBoxContainer" parent="." unique_id=304745990]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MiddleSplit" unique_id=174764208]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScreenPlaceholder" type="Panel" parent="MiddleSplit/VBoxContainer" unique_id=523002713]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MiddleSplit/VBoxContainer" unique_id=1967221986]
layout_mode = 2
size_flags_vertical = 3

[node name="Health" type="Panel" parent="MiddleSplit/VBoxContainer/HBoxContainer" unique_id=1748921222]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HealthBar" type="ProgressBar" parent="MiddleSplit/VBoxContainer/HBoxContainer/Health" unique_id=271351998]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 10.0
step = 1.0
fill_mode = 3
show_percentage = false

[node name="Interactions" type="Panel" parent="MiddleSplit/VBoxContainer/HBoxContainer" unique_id=260513538]
layout_mode = 2
size_flags_horizontal = 3

[node name="Interactions" type="VBoxContainer" parent="MiddleSplit/VBoxContainer/HBoxContainer/Interactions" unique_id=800554692]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Use" type="Button" parent="MiddleSplit/VBoxContainer/HBoxContainer/Interactions/Interactions" unique_id=834341530]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Use"

[node name="Combine" type="Button" parent="MiddleSplit/VBoxContainer/HBoxContainer/Interactions/Interactions" unique_id=1905466428]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Combine"

[node name="Examine" type="Button" parent="MiddleSplit/VBoxContainer/HBoxContainer/Interactions/Interactions" unique_id=1445647941]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Examine"

[node name="VBoxContainer2" type="VBoxContainer" parent="MiddleSplit" unique_id=1460642235]
layout_mode = 2
size_flags_horizontal = 3

[node name="Inventory" type="GridContainer" parent="MiddleSplit/VBoxContainer2" unique_id=43690072]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[connection signal="pressed" from="MiddleSplit/VBoxContainer/HBoxContainer/Interactions/Interactions/Use" to="." method="_on_use_pressed"]
